# reversi

./: .ackrc  .gitignore  README.md  reversi-haskell.cabal  reversi.cabal  stack.yaml
app/: Main.hs  Play.hs
src/: Lib.hs  Reversi.hs
src/Reversi/: AI.hs
src/Reversi/AI/: Common.hs  Eager.hs  GameTree.hs  Negamax.hs  Random.hs
