name:                reversi
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sunjay/reversi#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reversi, Reversi.AI
  other-modules:       Reversi.AI.Random, Reversi.AI.Eager, Reversi.AI.Common, Reversi.AI.GameTree
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , ansi-terminal
                     , random
  default-language:    Haskell2010

executable reversi
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Play
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ansi-terminal
                     , reversi
                     , random
  default-language:    Haskell2010

test-suite reversi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reversi
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sunjay/reversi
